[FIX] Apply flex wrap at navbar

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ nav {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 50px;
   list-style: none;
   color: white;
